--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -42,17 +42,10 @@
           <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
             quam, feugiat vitaeeleifend leo.</p>
 
-          <p>Unnecessary text</p>
+          <!-- <p>Unnecessary text</p> -->
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-12  col-md-9">
-        <div class="chart">
-          <h2>Charts</h2>
-          
-        </div>
-      </div>
   </div>
 
   <!-- Footer-->
